Fixed section one z-index.

--- a/src/components/Contact/SectionTwo/style.scss
+++ b/src/components/Contact/SectionTwo/style.scss
@@ -22,6 +22,7 @@ section.sectionTwo {
     .smallHeading {
       color: #193166;
       margin-bottom: 3rem;
+      font-family: Josefin Sans;
       .homegrown {
         color: #ce4c16;
       }
